--- a/www/public_html/css/imageSlider.css
+++ b/www/public_html/css/imageSlider.css
@@ -1,13 +1,13 @@
 .cbp-fwslider {
 	position: absolute;
-        height: 400px;
-        width: 600px;
-        top: 80px;
+        height: 56%;
+        width: 48%;
+        top: 90px;
         left: 6%;
-	margin: 10px 0;
+	margin: 0;
 	overflow: hidden;
-	padding: 40px 0 60px;
-        background-color: #47a3da;
+	padding: 0;
+       /* background-color: #DDDDDD; */
 }
 
 .cbp-fwslider ul {
@@ -37,8 +37,9 @@
 .cbp-fwslider ul li > a img {
 	border: none;
 	display: block;
-	margin: 0 auto;
-	max-width: 75%;
+	margin: auto;
+        max-height: 100%;
+        max-width: 100%;
 }
 
 .cbp-fwslider nav span {
@@ -46,7 +47,7 @@
 	top: 50%;
 	width: 50px;
 	height: 100px;
-	background: #47a3da;
+	/*background: #47a3da;*/
 	color: #fff;
 	font-size: 50px;
 	text-align: center;
@@ -57,7 +58,7 @@
 }
 
 .cbp-fwslider nav span:hover {
-	background: #378fc3;
+	background: #000;
 }
 
 .cbp-fwslider nav span.cbp-fwnext {
